[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Music/SFX/Enemy_hit.wav" type="AudioStream" id=2]
[ext_resource path="res://Enemies/FallTrap.gd" type="Script" id=6]
[ext_resource path="res://themes/Enemybar2.tres" type="StyleBox" id=7]
[ext_resource path="res://themes/Enemybar1.tres" type="StyleBox" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.4701, 18.7721 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.7135, 47.4509 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.4123, 47.4925 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.6764, 47.1151 )

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.119, 12.062 )

[node name="Guytrap" type="KinematicBody2D"]
collision_layer = 14
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.513336, -0.739982 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.328239, -5.00485 )
texture = ExtResource( 1 )
vframes = 8
hframes = 5

[node name="Sighted" type="Area2D" parent="."]
position = Vector2( 0, -116.266 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sighted"]
shape = SubResource( 2 )

[node name="Rightarea" type="Area2D" parent="."]
position = Vector2( 46.3615, -117.704 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rightarea"]
position = Vector2( 0.779663, -0.00614166 )
shape = SubResource( 3 )

[node name="Leftarea" type="Area2D" parent="."]
position = Vector2( -46.4144, -116.602 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leftarea"]
shape = SubResource( 4 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -32.8936, 0 )
collision_mask = 6

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 31.0405, -0.926582 )
collision_mask = 6

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -20.3622
margin_top = -41.9133
margin_right = 16.6378
margin_bottom = -27.9133
rect_scale = Vector2( 1.10029, 0.487382 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 7 )
max_value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
visible = false
position = Vector2( 0, -16.6434 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="dead" from="." to="." method="_on_Guytrap_dead"]
[connection signal="body_exited" from="Sighted" to="." method="_on_Sighted_body_exited"]
[connection signal="body_entered" from="Rightarea" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Leftarea" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
